Added icons  to aboutme Section

--- a/aboutmesection/aboutmesection.css
+++ b/aboutmesection/aboutmesection.css
@@ -1,7 +1,23 @@
 #aboutme {
-text-align: center;
+    text-align: center;
 }
 
-.aboutme-section-description{
+.aboutme-section-description {
     text-align: justify;
+    margin-top: 40px;
 }
+
+.aboutme-icons {
+    font-size: 25px;
+    margin-top: 45px;
+}
+
+.aboutme-icon {
+    margin: 10px;
+    color: var(--titleSectionSecondaryColors);
+}
+
+.aboutme-icon:hover {
+    cursor: pointer;
+    color: var(--titleSectionTertiaryColors);
+}  
