created crapsgame space

--- a/titlesection/titlesection.css
+++ b/titlesection/titlesection.css
@@ -9,7 +9,7 @@
     color: var(--titleSectionPrimaryColors);
     Text-align: center;
     padding-top: 200px;
-    background-image: url('../images/image.png');
+    background-image: url('../images/brownimage.png');
     background-position: center top;
 
 }
