Added craps game username input

--- a/crapsgame/crapsgame.css
+++ b/crapsgame/crapsgame.css
@@ -15,3 +15,27 @@
     background-image: url(../images/casinoimage.png);
     background-size: cover ;
 }
+.craps-registration-pane {
+    margin-top: 25px;
+    text-align: center;
+
+}
+.craps-registration-input {
+    background: none;
+    border: none;
+    border-bottom: solid white 1px;
+    margin-top: 25px;
+    color: white;
+    text-align: center;
+}
+.craps-registration-input:focus {
+    outline-width: 0;
+}
+.craps-registration-continue{
+    margin-top: 25px;
+}
+.craps-registration-continue:hover {
+    cursor: pointer;
+    font-weight: bold;
+    
+}
