--- a/crapsgame/crapsgame.css
+++ b/crapsgame/crapsgame.css
@@ -1,17 +1,25 @@
+:root {
+    --width-scale: min(700px, 80vw, 80vh);
+    --height-scale:calc(var(--width-scale)* 0.714);
+    --game-title-size: min(calc(var(--height-scale)* 0.25), 2em);
+    --title-margin-bottom: calc(var(--height-scale)* 0.25);
+}   
 #craps-game{
   background-image: url('../images/blueimage.png');
   color: white;
   background-position: center top;
 }
 .craps-game-title {
- text-align: center;
- margin-top: 100px;
+    font-size: var(--game-title-size);
+    text-align: center;
+    margin-top: calc(calc(100vh - var(--game-title-size) - var(--title-margin-bottom) - var(--height-scale)) / 2);
+    margin-bottom: var(--title-margin-bottom)
 }
 .craps-game-container {
-    width: min(700px, 80vw);
-    height: 500px;
+    width: var(--width-scale);
+    height: var(--height-scale);
     border: solid black 2px;
-    margin: 100px auto 0 auto;
+    margin: 0 auto;
     background-image: url(../images/casinoimage.png);
     background-size: cover ;
 }
