--- a/crapsgame/crapsgame.css
+++ b/crapsgame/crapsgame.css
@@ -14,7 +14,7 @@
     font-size: var(--game-title-size);
     text-align: center;
     margin-top: calc(calc(100vh - var(--game-title-size) - var(--title-margin-bottom) - var(--height-scale)) / 2);
-    margin-bottom: var(--title-margin-bottom)
+    margin-bottom: var(--title-margin-bottom);
 }
 .craps-game-container {
     width: var(--width-scale);
@@ -25,7 +25,8 @@
     background-size: cover ;
 }
 #craps-registration-pane {
-    margin-top: 25px;
+    margin-top: calc(var(--height-scale) * 0.15);
+    font-size: calc(var(--game-title-size) * 0.5);
     text-align: center;
 
 }
@@ -33,16 +34,15 @@
     background: none;
     border: none;
     border-bottom: solid white 1px;
-    margin-top: 25px;
+    margin: calc(var(--height-scale) * 0.05) 0;
     color: white;
+    font-size: calc(var(--game-title-size) * 0.5);
     text-align: center;
 }
 .craps-registration-input:focus {
     outline-width: 0;
 }
-.craps-registration-continue{
-    margin-top: 25px;
-}
+
 .craps-registration-continue:hover {
     cursor: pointer;
     font-weight: bold;
@@ -54,10 +54,11 @@
 
 .craps-main-section-stats {
     text-align: center;
-    margin-top: 70px;
+    font-size: calc(var(--height-scale) * 0.04);
+    margin-top: calc(var(--height-scale) * 0.15);
 }
 
 #craps-stats-money-container {
-    font-size: 30px;
-    margin: 25px 0 5px 0;
+    font-size: calc(var(--height-scale) * 0.085);
+    margin-top: calc(var(--height-scale) * 0.04);
 }
