--- a/crapsgame/crapsgame.css
+++ b/crapsgame/crapsgame.css
@@ -21,8 +21,9 @@
     height: var(--height-scale);
     border: solid black 2px;
     margin: 0 auto;
-    background-image: url(../images/casinoimage.png);
+    background-image: url(../images/crapstable.jpg);
     background-size: cover ;
+    position: relative;
 }
 #craps-registration-pane {
     margin-top: calc(var(--height-scale) * 0.15);
@@ -50,6 +51,8 @@
 
 #craps-main-section {
     display: none;
+    height: 100%;
+    
 }
 
 .craps-main-section-stats {
@@ -61,4 +64,13 @@
 #craps-stats-money-container {
     font-size: calc(var(--height-scale) * 0.085);
     margin-top: calc(var(--height-scale) * 0.04);
+}
+
+.craps-round-manager {
+    border: solid red 4px;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: calc(var(--height-scale) * 0.04);
+    font-size: calc(var(--height-scale) * 0.04);
 }
