--- a/crapsgame/crapsgame.css
+++ b/crapsgame/crapsgame.css
@@ -66,11 +66,66 @@
     margin-top: calc(var(--height-scale) * 0.04);
 }
 
+.craps-on-table-container {
+    margin-top: calc(var(--height-scale) * 0.2);
+    font-size: calc(var(--height-scale) * 0.03s);
+    border: none;
+    text-align: center;
+}
+
 .craps-round-manager {
-    border: solid red 4px;
     width: 100%;
     text-align: center;
     position: absolute;
     bottom: calc(var(--height-scale) * 0.04);
     font-size: calc(var(--height-scale) * 0.04);
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
+
+.craps-roll-dice-container {
+    width: fit-content;
+    margin: 0% auto;
+    
+}
+.craps-roll-dice-container:hover {
+    cursor: pointer;
+    transform: scale(1,1);
+    font-size: large;
+}
+
+.craps-betting-grid {
+    display: grid;
+    grid-template-columns: 33% auto 33%;
+    width: 80%;
+    margin: 0% auto;
+    border: solid white 2px;
+    border-radius: 5px;
+}
+
+.craps-bet-button {
+    padding: calc(var(--height-scale) * 0.03);
+}
+
+.craps-bet-button:hover {
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.craps-bet-amount-container {
+    padding: calc(var(--height-scale) * 0.03);
+    border-right: solid white 2px;
+    border-left: solid white 2px;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+#craps-user-bet-amount {
+    margin: 0 calc(var(--height-scale) * 0.03);
+}
+
+.craps-user-bet-amount-change:hover {
+     cursor: pointer;
+    font-weight: bold;
+}
+
