scaled dice animation upon rolling

--- a/crapsgame/crapsgame.css
+++ b/crapsgame/crapsgame.css
@@ -94,6 +94,10 @@
     transform: scale(1,1);
     font-size: large;
 }
+#craps-roll-dice-animation-container {
+    margin-top: calc(var(--height-scale) * -0.17); 
+    margin-left: calc(var(--height-scale) * -0.15); 
+}
 
 .craps-betting-grid {
     display: grid;
